# rooms

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  script.js  shell.html
data/: tutorial_steps.json  ui.json
data/exports/: myscene.txt  test.room  test.txt
data/fonts/Lato/: Lato.DDS  Lato.json
data/meshes/: character.glb  cube.mtl  hollow_cube.mtl  raycast.mtl  torus.mtl  wired_circle.mtl  wired_sphere.mtl
data/meshes/controllers/: meta_quest_controllers.glb
data/meshes/cube/: cube.mtl
data/shaders/: AABB_shader.wgsl  axis.wgsl  brdf_lut_gen.wgsl  color_blend_modes.wgsl  math.wgsl  mesh_color.wgsl  mesh_grid.wgsl  mesh_includes.wgsl  mesh_outline.wgsl  mesh_pbr.wgsl  mesh_pbr_skinning.wgsl  mesh_texture.wgsl  mesh_texture_cube.wgsl  mesh_texture_ui.wgsl  mesh_transparent.wgsl  mesh_ui.wgsl  mesh_wireframe.wgsl  mipmaps.wgsl  noise.wgsl  panorama_to_cubemap.wgsl  pbr_functions.wgsl  pbr_light.wgsl  prefilter_env.wgsl  quad_eye.wgsl  quad_mirror.wgsl  raymarching.wgsl  sculpt_box_area.wgsl  sdf_fonts.wgsl  sdf_functions.wgsl  sdf_initialization.wgsl  sdf_merge.wgsl  sdf_raymarching.wgsl  tonemappers.wgsl  ui_xr_panel.wgsl
data/shaders/octree/: README.md  brick_copy.wgsl  brick_copy_aabb_gen.wgsl  brick_removal.wgsl  brick_unmark.wgsl  bricks_compute_aabb.wgsl  clean_octree.wgsl  evaluator.wgsl  evaluator_1-5_interval_setup.wgsl  evaluator_1_aabb_culling_step.wgsl  evaluator_2-5_write_to_texture_step.wgsl  evaluator_2_interval_culling_step.wgsl  evaluator_3_write_to_texture.wgsl  evaluator_culling_step.wgsl  evaluator_interval_culling_step.wgsl  evaluator_last_level.wgsl  evaluator_preview_culling.wgsl  evaluator_subdivide.wgsl  evaluator_subdivide_preview.wgsl  increment_level.wgsl  initialization.wgsl  material_packing.wgsl  octree_includes.wgsl  octree_ray_intersection.wgsl  octree_ray_intersection_clean.wgsl  prepare_indirect_sculpt_render.wgsl  proxy_geometry_plain.wgsl  proxy_geometry_preview.wgsl  ray_intersection_includes.wgsl  sculpture_delete.wgsl  sdf_commons.wgsl  sdf_functions.wgsl  sdf_interval_functions.wgsl  sdf_interval_preview_stroke_functions.wgsl  sdf_interval_stroke_functions.wgsl  sdf_material.wgsl  sdf_render_functions.wgsl  sdf_stroke_functions.wgsl  sdf_stroke_preview_functions.wgsl  sdf_utils.wgsl  (+2 more)
data/shaders/ui/: ui_button.wgsl  ui_color_picker.wgsl  ui_group.wgsl  ui_palette.wgsl  ui_ray_pointer.wgsl  ui_selector.wgsl  ui_slider.wgsl  ui_slider_h.wgsl  ui_texture.wgsl  ui_utils.wgsl
data/textures/environments/: sky_old2.hdr
data/ui/: helper.json  main.json
src/: main.cpp  rooms.cpp  rooms_includes.h
src/engine/: rooms_engine.cpp  rooms_engine.h
src/framework/nodes/: character_3d.cpp  character_3d.h  custom_node_factory.cpp  custom_node_factory.h  group_3d.cpp  group_3d.h  player_node.cpp  player_node.h  sculpt_instance.cpp  sculpt_instance.h  sculpt_node.cpp  sculpt_node.h
src/framework/resources/: room.cpp  room.h  sculpt.cpp  sculpt.h
src/framework/ui/: context_menu.cpp  context_menu.h  cursor.cpp  cursor.h  inspector.cpp  inspector.h  keyboard.cpp  keyboard.h  timeline.cpp  timeline.h
src/graphics/: edit.cpp  edit.h  raymarching_renderer.cpp  raymarching_renderer.h
src/graphics/managers/: sculpt_manager.cpp  sculpt_manager.h  stroke_manager.cpp  stroke_manager.h
src/graphics/renderers/: mesh_renderer.cpp  mesh_renderer.h  raymarching_renderer.cpp  raymarching_renderer.h  rooms_renderer.cpp  rooms_renderer.h  stroke_manager.cpp  stroke_manager.h
src/tooling/: base.h  mirror.cpp  mirror.h
src/tools/: add.cpp  add.h  animation_editor.cpp  animation_editor.h  base_editor.cpp  base_editor.h  color.cpp  color.h  group_editor.cpp  group_editor.h  menu_stage.cpp  menu_stage.h  mirror.cpp  mirror.h  module.h  player_editor.cpp  player_editor.h  player_stage.cpp  player_stage.h  sausage.cpp  sausage.h  scene_editor.cpp  scene_editor.h  sculpt.cpp  sculpt.h  sculpt_editor.cpp  sculpt_editor.h  stage.cpp  stage.h  tool.h  transform_gizmo.cpp  tutorial_editor.cpp  tutorial_editor.h  tutorial_stage.cpp  tutorial_stage.h
src/tools/animation/: animation_module.cpp  animation_module.h
src/tools/scene/: scene_editor.cpp  scene_editor.h
src/tools/sculpt/: paint.cpp  paint.h  sculpt.cpp  sculpt.h  sculpt_editor.cpp  sculpt_editor.h  sweep.cpp  sweep.h  tool.cpp  tool.h
src/ui/: transform_gizmo.cpp  transform_gizmo.h  ui.cpp  ui.h  ui_controller.cpp  ui_controller.h  ui_widgets.cpp  ui_widgets.h
